# vibe-coding

LiteFlow-AI/backend/: main.py  pyproject.toml  requirements.txt  simple_requirements.txt
LiteFlow-AI/backend/app/: config.py  main.py
LiteFlow-AI/backend/app/api/v1/: __init__.py  api_keys.py  apps.py  debug.py  knowledge_base.py  models.py  prompt.py  tools.py  workflow.py
LiteFlow-AI/backend/app/schemas/: api_keys.py  apps.py  debug.py  knowledge_base.py  models.py  prompt.py  tools.py  workflow.py
LiteFlow-AI/backend/app/services/api_keys/: __init__.py  api_key_manager.py
LiteFlow-AI/backend/app/services/apps/: __init__.py  app_manager.py
LiteFlow-AI/backend/app/services/debug/: debug_manager.py
LiteFlow-AI/backend/app/services/knowledge_base/: __init__.py  document_processor.py  knowledge_base_manager.py
LiteFlow-AI/backend/app/services/model_gateway/: gateway.py
LiteFlow-AI/backend/app/services/prompt/: __init__.py  prompt_service.py
LiteFlow-AI/backend/app/services/tools/: __init__.py  base.py  calculator.py  datetime_tool.py  registry.py  web_search.py
LiteFlow-AI/backend/app/services/workflow/: __init__.py  workflow_executor.py  workflow_manager.py
LiteFlow-AI/backend/app/utils/: logger.py  observability.py
LiteFlow-AI/backend/chroma_data/: chroma.sqlite3
code-agent-client/: README.md  main.py  pyproject.toml
code-agent-client/code_agent_client/: config.py
code-agent-client/code_agent_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code-agent-client/code_agent_client/ai/: anthropic.py  base.py  google.py  openai.py
code-agent-client/code_agent_client/storage/: api_key_manager.py  database.py  models.py
code-agent-client/code_agent_client/utils/: encryption.py
code-agent-client/docs/: CONSTITUTION.md  DEVELOPMENT_SETUP.md  SPECIFICATION.md  TECHNICAL_PLAN.md
code-agent-client/tests/: test_encryption.py
(+327 files in other folders)
