[project]
name = "code-agent-client"
version = "0.1.0"
description = "AI-powered coding assistant client"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.5.0",
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=42.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.0.0"
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.black]
line-length = 88
target-version = ['py314']

[tool.ruff]
select = ["E", "F", "W"]
line-length = 88

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

